# PrivacyEngCollabSpace

./: CONTRIBUTING.md  README.md  help.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
templates/: README.md  tool-template.md  use-case-template.md
tools/: README.md
tools/de-identification/: README.md
tools/de-identification/2018 DP Synthetic Data Challenge Competitor Packs/: README.md
tools/de-identification/2018 Differential-Privacy-Synthetic-Data-Challenge-Algorithms-and-Materials/: README.md
tools/de-identification/2018-Differential-Privacy-Synthetic-Data-Challenge-Algorithms-and-Materials/: README.md
tools/de-identification/2020-Differential-Privacy-Temporal-Map-Challenge-Algorithms-and-Materials/: README.md
tools/de-identification/AMP/: README.md
tools/de-identification/ARX/: README.md
tools/de-identification/Chorus/: README.md
tools/de-identification/Differential-Privacy-Synthetic-Data-Challenge/: README.md
tools/de-identification/Differential-Privacy-Synthetic-Data-Challenge-Algorithms/: README.md
tools/de-identification/Differentially-Private-Stochastic-Gradient-Descent-DP-SGD/: README.md
tools/de-identification/Eketelo/: README.md
tools/de-identification/Ektelo/: README.md
tools/de-identification/GUPT/: README.md
tools/de-identification/MusCAT/: README.md
tools/de-identification/visa-pets-FL/ot_library/: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
tools/de-identification/visa-pets-FL/ot_library/cmake/: buildOptions.cmake  findDependancies.cmake  install.cmake
tools/de-identification/visa-pets-FL/ot_library/drop-ot/: Defines.h  IknpOtExt.cpp  IknpOtExt.h  MasnyRindal.h  Tools.cpp  Tools.h  UnitTests.h  config.h.in
tools/de-identification/visa-pets-FL/ot_library/frontend/: CMakeLists.txt  main.cpp
tools/de-identification/visa-pets-FL/ot_library/wrapper/: CMakeLists.txt  CWrapper.cpp
tools/disassociability/visa-pets-FL/ot_library/drop-ot/: CMakeLists.txt  MasnyRindal.cpp  UnitTests.cpp
tools/risk-assessment/: README.md
tools/risk-management/: README.md
use-cases/: README.md
use-cases/de-identification/: README.md
use-cases/risk-assessment/: README.md
use-cases/risk-management/: README.md
(+113 files in other folders)
